# echogtfs

./: .env.example  .gitignore  LICENSE.md  README.md  docker-compose.yml  gtfs-realtime.proto
.github/: copilot-instructions.md
.github/instructions/: backend.instructions.md  frontend.instructions.md
.github/prompts/: create-adapter.prompt.md
.github/workflows/: release.yml  tests.yml
backend/: .env.test  Dockerfile  pyproject.toml
backend/src/echogtfs/: __init__.py  __main__.py  config.py  database.py  extensions.py  main.py  migrations.py  models.py  schemas.py  security.py
backend/src/echogtfs/migrations/: 001.sql  002.sql  003.sql  004.sql  005.sql  006.sql  007.sql  008.sql  009.sql  010.sql  011.sql  012.sql
backend/src/echogtfs/routers/: alerts.py  auth.py  gtfs.py  realtime.py  settings.py  sources.py  users.py
backend/src/echogtfs/services/: alert_import.py  cleanup.py  datalog.py  gtfs_import.py
backend/src/echogtfs/services/adapters/: __init__.py  base.py  gtfsrt.py  sirilite.py  sirisx.py
backend/tests/: README.md  __init__.py  helpers.py  test_config.py  test_security.py  test_sliding_token.py  test_users.py
backend/tests/adapters/: test_base.py  test_gtfsrt.py  test_sirilite.py  test_sirisx.py
docs/manual/: README.md  adapters.md  configuration.md  creating_alerts.md  data_sources.md  getting_started.md  logging.md  user_management.md
frontend/: Dockerfile  index.html  nginx.conf
frontend/css/: app.css
frontend/js/: accounts.js  alerts.js  app.js  core.js  languages.js  localization.js  main.js  settings.js  sources.js
