[build-system]
requires = ["setuptools>=68", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echogtfs"
dynamic = ["version"]
description = "echogtfs – FastAPI backend service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.2.0",
    "pydantic[email]>=2.6.0",
    "bcrypt>=4.1.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",
    "apscheduler>=3.10.4",
    "protobuf>=4.0.0",
]

[project.scripts]
echogtfs = "echogtfs.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
echogtfs = ["migrations/*.sql"]

[tool.setuptools_scm]
root = ".."
write_to = "backend/src/echogtfs/_version.py"
